adjust alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -100,12 +100,11 @@ body {
 
 .center-embed {
 	grid-area: center-embed;
-	border: 1px solid #E5E5E6;
 }
 
 .center-embed iframe {
 	width: 100%;
-	height: 630px;
+	height: 620px;
 	border: 0;
 	left: 0;
 	top: 0;
@@ -130,6 +129,7 @@ body {
 	grid-area: sidebar-left;
 	background-color: #F7F7EF;
 	border: #E5E5E6 solid 1px;
+	height: 100%;
 }
 
 .sidebar-right {
